feat-[166272357]: Implement Comment Like Functionality
- Refactor comment helper function

[Delivers #166272357]
