# server/helpers/comments.js
@@ -1,10 +1,12 @@
 import models from '@models';
+import Sequelize from 'sequelize';
 
 const { Comment } = models;
 
 export const comments = async (value) => {
   const payload = await Comment.findAll({
-    attributes: ['id', 'createdAt', 'updatedAt', 'body'],
+    attributes: ['id', 'createdAt', 'updatedAt', 'body',
+      [Sequelize.fn('COUNT', Sequelize.col('CommentLikes.userId')), 'likeCount']],
     where: {
       articleId: value
     },
@@ -18,7 +20,12 @@ export const comments = async (value) => {
         as: 'profile',
         attributes: ['bio', 'avatar']
       }]
-    }]
+    },
+    {
+      model: models.CommentLike,
+      attributes: []
+    }],
+    group: ['Comment.id', 'author.id', 'author->profile.id']
   });
 
   return payload;
@@ -26,7 +33,7 @@ export const comments = async (value) => {
 
 export const singleComment = async (id) => {
   const payload = await Comment.findOne({
-    attributes: ['id', 'createdAt', 'updatedAt', 'body'],
+    attributes: ['id', 'createdAt', 'updatedAt', 'body', [Sequelize.fn('COUNT', Sequelize.col('CommentLikes.userId')), 'likeCount']],
     where: { id },
     include: [{
       model: models.User,
@@ -37,7 +44,12 @@ export const singleComment = async (id) => {
         as: 'profile',
         attributes: ['bio', 'avatar']
       }]
-    }]
+    },
+    {
+      model: models.CommentLike,
+      attributes: [],
+    }],
+    group: ['Comment.id', 'author.id', 'author->profile.id']
   });
 
   return payload;
